河上レベル2 修正

--- a/html/level2/css/level2.css
+++ b/html/level2/css/level2.css
@@ -41,11 +41,14 @@ body {
 
 /*wrapper！！！！！！！！*/
 
-.sidebar {
-  overflow: hidden;
+.side {
+
+
+
 }
 
 .sidebar-wrapper {
+  overflow: hidden;
   width: 30%;
   height: 100%;
   float: left;
